--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "get-objects-diff",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "A package returns diff of two objects using lodash library",
   "main": "main.js",
   "scripts": {
@@ -13,6 +13,10 @@
   "homepage": "https://github.com/marusyabon/get-objects-diff.git",
   "author": "XB Software",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/marusyabon/get-objects-diff.git"
+  },
   "dependencies": {
     "lodash": "^4.17.21"
   }
